# tauri-dpwh-docs

./: bash.exe.stackdump  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
config/: amountToWords.ts  authStore.ts  autoStart.rs  autostart.ts  convertToDate.ts  formatNumber.ts  interface.ts  mssql.ts  query.sql  query.ts  toast.ts  useLogin.ts  useSelectDatabase.ts  useShowDashboard.ts  useShowFab.ts
public/: bidReceiptTemplate.docx  goodsNOATemplate.docx  goodsNTPTemplate.docx  obligation.docx  pioCertTemplate.docx  pioMemoTemplate.docx  pioTemplate.docx  template.docx  template.xlsx
public/3-STRIKE/: individual.docx  strike.docx  transmittal.docx
public/TEMPLATE/: Cert Memo Data.xlsx  goodsNTPTemplate.docx
public/TEMPLATE/PIO CERT/: Cert Data.xlsx  PioCertTemplate.docx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/3-STRIKE/: strike.docx
src-tauri/src/: lib.rs  main.rs  mssql.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/checklist/: page.tsx
src/app/component/: BidderTable.tsx
src/app/components/: BidderTable.tsx  ContractNav.tsx  ContractorNav.tsx  InfraDashboard.tsx  NavLinks.tsx  Navbar.tsx
src/app/contractors/: page.tsx
src/app/create-bid-receipt/: page.tsx
src/app/create-bond/: page.tsx
src/app/create-contract/: page.tsx
src/app/create-oblig/: page.tsx
src/app/create-pio-memo/: ContractTable.tsx  page.tsx
src/app/create-pio-ney/: ContractTable.tsx  page.tsx
src/app/create-strike/: page copy.tsx  page.tsx
src/app/create-strike copy/: page.tsx
(+33 files in other folders)
