[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

# Add these dependencies to your existing Cargo.toml
[dependencies]
tiberius = { version = "0.12.3", features = ["chrono", "tds73"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-localhost = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["mysql", "sqlite"] }
tauri-plugin-dialog = "2"
